feat: usage SSE
